--- a/test_vin_frontend.html
+++ b/test_vin_frontend.html
@@ -17,7 +17,7 @@
                     <label for="vin" class="form-label">VIN</label>
                     <div class="input-group">
                         <input type="text" class="form-control" id="vin" name="vin" 
-                               placeholder="Enter 17-character VIN" maxlength="17" value="1HGBH41JXMN109186">
+                               placeholder="Enter 17-character VIN" maxlength="17">
                         <button type="button" class="btn btn-outline-secondary" id="decodeVinBtn" 
                                 onclick="decodeVIN()">
                             <i class="fas fa-search"></i>
