--- a/qa/artifacts/html/navigation_NAVIGATION_ERROR_1755046936.html
+++ b/qa/artifacts/html/navigation_NAVIGATION_ERROR_1755046936.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to Guided Inspection - CheckMate Virtue</title>
+    <title>Redirecting to Inspection List - CheckMate Virtue</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -32,17 +30,17 @@
 <body>
     <div class="redirect-container">
         <div class="redirect-card">
-            <i class="fas fa-clipboard-check fa-3x text-primary mb-3"></i>
-            <h3>Redirecting to Guided Inspection</h3>
+            <i class="fas fa-clipboard-list fa-3x text-primary mb-3"></i>
+            <h3>Redirecting to Inspection List</h3>
             <p class="text-muted mb-4">
-                You're being redirected to the new guided inspection system with enhanced features.
+                You're being redirected to the new guided inspection list with enhanced features and statistics.
             </p>
             <div class="spinner-border text-primary spinner" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
             <p class="mt-3">
-                <a href="/inspection/form" class="btn btn-primary">
-                    <i class="fas fa-arrow-right"></i> Continue to Guided Inspection
+                <a href="/inspection/list" class="btn btn-primary">
+                    <i class="fas fa-arrow-right"></i> Continue to Inspection List
                 </a>
             </p>
             <small class="text-muted">
@@ -52,17 +50,10 @@
     </div>
 
     <script>
-        // Get inspection ID from template if editing
-        const inspectionId = {{ inspection_id | default('null') | tojson }};
-        
         // Auto-redirect after 2 seconds
         setTimeout(function() {
-            if (inspectionId) {
-                window.location.href = `/inspection/form?id=${inspectionId}`;
-            } else {
-                window.location.href = '/inspection/form';
-            }
+            window.location.href = '/inspection/list';
         }, 2000);
     </script>
-</body>
-</html> 
+
+ </body></html>
